testsuite/tests/rename/should_fail/T6148c.stderr

T6148c.hs:5:6: error:
    A 65-tuple is too large for GHC
      (max size is 64)
      Workaround: use nested tuples or define a data type
